feat(appkit): activate public input contract (#326)
* feat(appkit): activate public input contract

* docs(appkit): record task 6 verification

* test(appkit): harden public input evidence